Datos/Envios/188/error.txt
../Datos/Envios/188/PiezaPastelCompilationError.c: In function ‘main’:
../Datos/Envios/188/PiezaPastelCompilationError.c:3:13: error: ‘hola’ undeclared (first use in this function)
     int z = hola;
             ^~~~
../Datos/Envios/188/PiezaPastelCompilationError.c:3:13: note: each undeclared identifier is reported only once for each function it appears in
